tests/dockerfile/graph_builder/checks/resources/RunUnsafeCurl/fail/Dockerfile.shell
FROM alpine:3.5
RUN echo -n -Lv https://example.com && curl -k https://example.com
